--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -51,6 +51,7 @@ h2
     text-align: center;
 }
 
+/* Override Vuetify dark theme background color */
 .theme--dark
 {
     background-color: #111 !important;
