--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald');
+
 h1, h2
 {
     line-height: 1;
@@ -40,7 +42,7 @@ h2
     width: 100%;
     height: 100%;
 
-    font-family: 'Oswald';
+    font-family: 'Oswald', sans-serif;
     font-size: 5vh;
 }
 
