--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -5,6 +5,18 @@
 
 
 //---------------------------------------------------------------------------
+// Font face
+//---------------------------------------------------------------------------
+@font-face
+{
+    font-family: 'Oswald';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Oswald Regular'), local('Oswald-Regular'), url('/Oswald.woff2') format('woff2');
+}
+
+
+//---------------------------------------------------------------------------
 // Properties
 //---------------------------------------------------------------------------
 $Red: #a3383c;
@@ -57,7 +69,9 @@ hr
 {
     display: table;
     width: 100%;
-    height: 100%;    
+    height: 100%;   
+    
+    font-family: 'Oswald';
     font-size: 5vh;
 
     div
