--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -71,7 +71,7 @@ hr
     width: 100%;
     height: 100%;   
     
-    font-family: 'Oswald';
+    font-family: 'Oswald', sans-serif;
     font-size: 5vh;
 
     div
