Home > Index :: add font-display

--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -10,6 +10,7 @@
 @font-face
 {
     font-family: 'Oswald';
+    font-display: swap;
     font-style: normal;
     font-weight: 400;
     src: local('Oswald Regular'), local('Oswald-Regular'), url('/Oswald.woff2') format('woff2');
