--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -1,10 +1,4 @@
 //---------------------------------------------------------------------------
-// Imports
-//---------------------------------------------------------------------------
-@import url('/Oswald.woff2');
-
-
-//---------------------------------------------------------------------------
 // Font face
 //---------------------------------------------------------------------------
 @font-face
@@ -13,7 +7,7 @@
     font-display: swap;
     font-style: normal;
     font-weight: 400;
-    src: local('Oswald Regular'), local('Oswald-Regular'), url('/Oswald.woff2') format('woff2');
+    src: url('/Oswald.woff2') format('woff2');
 }
 
 
@@ -72,6 +66,7 @@ hr
     width: 100%;
     height: 100%;   
 
+    font-family: 'Oswald', sans-serif;
     font-size: 5vh;
 
     div
