--- a/src/Views/Home/Index/Index.scss
+++ b/src/Views/Home/Index/Index.scss
@@ -1,4 +1,10 @@
 //---------------------------------------------------------------------------
+// Imports
+//---------------------------------------------------------------------------
+@import url(/Oswald.woff2);
+
+
+//---------------------------------------------------------------------------
 // Font face
 //---------------------------------------------------------------------------
 @font-face
